--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Card Game Explore</title>
+    <link rel="icon" href="img/logo.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Spartan:wght@500;600;700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +13,6 @@
 <div class="wrapper">
     <div class="circle-wrapper">
         <div class="circle circle-homepage"></div>
-        <!--<div class="circle-position-with-card"></div>-->
     </div>
 
     <div class="container"></div>
