--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <ul class="nav">
-            <li class="nav-link" onclick="console.log(this.innerHTML)">Store</li>
+            <li class="nav-link">Store</li>
             <li class="nav-link">About</li>
             <li class="nav-link">Pack</li>
             <li class="nav-link">Buy</li>
