--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="container"></div>
     <div class="header">
         <div class="header-logo">
-            <p>H<span>CARD</span></p>
+            <a href="#">H<span>CARD</span></a>
         </div>
 
         <ul class="nav">
-            <li class="nav-link">Store</li>
-            <li class="nav-link">About</li>
-            <li class="nav-link">Pack</li>
-            <li class="nav-link">Buy</li>
+            <a href="#"><li class="nav-link">Store</li></a>
+            <a href="#"><li class="nav-link">About</li></a>
+            <a href="#"><li class="nav-link">Pack</li></a>
+            <a href="#"><li class="nav-link">Buy</li></a>
         </ul>
     </div>
     <div class="content">
@@ -41,7 +41,7 @@
 
 
     <div class="main-img-wrapper">
-        <img class="main-img" src="img/all_cards.jpg"/>
+        <img class="main-img" src="img/all_cards.png"/>
     </div>
 
     <div class="content-card">
