--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Game Explore</title>
     <link rel="icon" href="img/logo.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Spartan:wght@500;600;700&display=swap"
