small changes adaptive width/height

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <div class="circle circle-homepage"></div>
     </div>
 
-    <div class="container"></div>
     <div class="header">
         <div class="header-logo">
             <a href="#">H<span>CARD</span></a>
@@ -29,30 +28,36 @@
             <a href="#"><li class="nav-link">Buy</li></a>
         </ul>
     </div>
-    <div class="content">
-        <h1 class="title">The Game of the year</h1>
-        <p class="description">the industry's standard dummy text ever since the 1500s,
-            where an unknown printer took a galley af type and
-            scrambled it to take o type specimen book.</p>
-        <div id="exploreBtn" class="explore-btn">
-            <div class="explore-btn-icon"><i class="fa fa-angle-down"></i></div>
-            <button>Explore</button>
+
+    <div class="container">
+        <div class="content">
+            <h1 class="title">The Game of the year</h1>
+            <p class="description">the industry's standard dummy text ever since the 1500s,
+                where an unknown printer took a galley af type and
+                scrambled it to take o type specimen book.</p>
+            <div id="exploreBtn" class="explore-btn">
+                <div class="explore-btn-icon"><i class="fa fa-angle-down"></i></div>
+                <button>Explore</button>
+            </div>
+        </div>
+
+        <div class="content-card">
+            <h1 id="cardTitle" class="card-name">Cat Witch</h1>
+            <p id="cardDescription" class="card-description">It was popularised in the 1960s with the release of
+                Letroset sheets containing Lorem ipsum passages,
+                and more recently with desktop publishing
+                software</p>
+            <div class="card-number"><p id="cardNumber">01</p></div>
         </div>
     </div>
+
+
 
 
     <div class="main-img-wrapper">
         <img class="main-img" src="img/all_cards.png"/>
     </div>
 
-    <div class="content-card">
-        <h1 id="cardTitle" class="card-name">Cat Witch</h1>
-        <p id="cardDescription" class="card-description">It was popularised in the 1960s with the release of
-            Letroset sheets containing Lorem ipsum passages,
-            and more recently with desktop publishing
-            software</p>
-        <div class="card-number"><p id="cardNumber">01</p></div>
-    </div>
 
     <div class="single-img-wrapper">
         <img id="card" class="single-img" src="img/card1.png"/>
