small changes backGround to img

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 <div class="wrapper">
     <div class="circle-wrapper">
         <div class="circle circle-homepage"></div>
-    </div>
-
-    <div class="header">
-        <div class="header-logo">
-            <a href="#">H<span>CARD</span></a>
-        </div>
-
-        <ul class="nav">
-            <a href="#"><li class="nav-link">Store</li></a>
-            <a href="#"><li class="nav-link">About</li></a>
-            <a href="#"><li class="nav-link">Pack</li></a>
-            <a href="#"><li class="nav-link">Buy</li></a>
-        </ul>
+        <img src="img/nav_element.png" alt="top-img" class="top-img">
     </div>
 
     <div class="container">
+        <div class="header">
+            <div class="header-logo">
+                <a href="#">H<span>CARD</span></a>
+            </div>
+
+            <ul class="nav">
+                <a href="#"><li class="nav-link">Store</li></a>
+                <a href="#"><li class="nav-link">About</li></a>
+                <a href="#"><li class="nav-link">Pack</li></a>
+                <a href="#"><li class="nav-link">Buy</li></a>
+            </ul>
+        </div>
         <div class="content">
             <h1 class="title">The Game of the year</h1>
             <p class="description">the industry's standard dummy text ever since the 1500s,
