--- a/index.html
+++ b/index.html
@@ -1,69 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card Game Explore</title>
-    <link rel="icon" href="img/logo.jpg">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Spartan:wght@500;600;700&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-</head>
-<body>
-<div class="wrapper">
-    <div class="circle-wrapper">
+    <link rel="icon" href="img/logo.jpg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Spartan:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="reset.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="circle-wrapper">
         <div class="circle circle-homepage"></div>
-        <img src="img/nav_element.png" alt="top-img" class="top-img">
-    </div>
-
-    <div class="container">
+        <img src="img/nav_element.png" alt="top-img" class="top-img" />
+      </div>
+      <div class="container">
         <div class="header">
-            <div class="header-logo">
-                <a href="#">H<span>CARD</span></a>
-            </div>
-
-            <ul class="nav">
-                <a href="#"><li class="nav-link">Store</li></a>
-                <a href="#"><li class="nav-link">About</li></a>
-                <a href="#"><li class="nav-link">Pack</li></a>
-                <a href="#"><li class="nav-link">Buy</li></a>
-            </ul>
+          <div class="header-logo">
+            <a href="#">H<span>CARD</span></a>
+          </div>
+          <ul class="nav">
+            <a href="#"><li class="nav-link">Store</li></a>
+            <a href="#"><li class="nav-link">About</li></a>
+            <a href="#"><li class="nav-link">Pack</li></a>
+            <a href="#"><li class="nav-link">Buy</li></a>
+          </ul>
         </div>
         <div class="content">
-            <h1 class="title">The Game of the year</h1>
-            <p class="description">the industry's standard dummy text ever since the 1500s,
-                where an unknown printer took a galley af type and
-                scrambled it to take o type specimen book.</p>
-            <div id="exploreBtn" class="explore-btn">
-                <div class="explore-btn-icon"><i class="fa fa-angle-down"></i></div>
-                <button>Explore</button>
-            </div>
+          <h1 class="title">The Game of the year</h1>
+          <p class="description">
+            the industry's standard dummy text ever since the 1500s, where an
+            unknown printer took a galley af type and scrambled it to take o
+            type specimen book.
+          </p>
+          <div id="exploreBtn" class="explore-btn">
+            <div class="explore-btn-icon"><i class="fa fa-angle-down"></i></div>
+            <button>Explore</button>
+          </div>
         </div>
 
         <div class="content-card">
-            <h1 id="cardTitle" class="card-name">Cat Witch</h1>
-            <p id="cardDescription" class="card-description">It was popularised in the 1960s with the release of
-                Letroset sheets containing Lorem ipsum passages,
-                and more recently with desktop publishing
-                software</p>
-            <div class="card-number"><p id="cardNumber">01</p></div>
+          <h1 id="cardTitle" class="card-name">Cat Witch</h1>
+          <p id="cardDescription" class="card-description">
+            It was popularised in the 1960s with the release of Letroset sheets
+            containing Lorem ipsum passages, and more recently with desktop
+            publishing software
+          </p>
+          <div class="card-number"><p id="cardNumber">01</p></div>
         </div>
-    </div>
+      </div>
 
-    <div class="main-img-wrapper">
-        <img class="main-img" src="img/all_cards.png"/>
-    </div>
-    <div class="single-img-wrapper">
-        <img id="card" class="single-img" src="img/card1.png"/>
+      <div class="main-img-wrapper">
+        <img class="main-img" src="img/all_cards.png" />
+      </div>
+      <div class="single-img-wrapper">
+        <img id="card" class="single-img" src="img/card1.png" />
         <button id="carouselBtn">next</button>
-        <img class="single-img-next" id="cardNext" src="img/card2.png"/>
+        <img class="single-img-next" id="cardNext" src="img/card2.png" />
+      </div>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-<script src="https://use.fontawesome.com/c44a79e7ba.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
-<script src="index.js"></script>
-
-</body>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="https://use.fontawesome.com/c44a79e7ba.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
